Fixed some minor alignment issues

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ body{
     }
     .about-us-div iframe{
         width: 100%;
+        height: 1290px;
     }
 }
 
